--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,11 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "spotify-web-api-node": "^5.0.2",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
