--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,8 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "node-fetch": "^3.2.10",
     "spotify-web-api-node": "^5.0.2"
   },
-  "devDependencies": {},
   "description": ""
 }
