Added snapshot testing to pages on client side

--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^10.10.0"
+    "cypress": "^10.10.0",
+    "react-test-renderer": "^18.2.0"
   }
 }
